Another attempt at a CSS fix for link spacing

--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ font-size: 0.8em;
     text-decoration: none;
 }
 
-#navsearchbtn {
-    color: black;
+.navcontent span .icon-stack {
+    padding: 4px 12px;
 }
 
 #navsearchtext {
